[tool.poetry]
name = "restaurant-booking"
version = "0.1.0"
description = ""
authors = ["CHAMOMILE <CHAMOM2LES@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
uvicorn = "^0.34.1"
pydantic-settings = "^2.8.1"
black = "^25.1.0"
ruff = "^0.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
